--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="#">Download Excursion (Coming soon!)</a></p>
+    <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
   </body>
 </html>
