--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
       Excursion remembers places you like, and recommends new points of interest
       around you.
     </p>
+    <p><img src="resources/images/camp.jpg" /></p>
+    <p><img src="resources/images/phone.png" /></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
   </body>
 </html>
